updated index.html styles.css

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <nav class="site-nav grid">
-      <h1>Ronald Nkadimeng</h1>
-      <ul>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#About">About</a></li>
-      </ul>
-    </nav>
+    <header>
+      <nav class="site-nav grid">
+        <h1>Ronald Nkadimeng</h1>
+        <ul>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#about">About</a></li>
+        </ul>
+      </nav>
+    </header>
     <section id="welcome" class="grid">
       <div class="welcome-text">
         <h2>
@@ -24,9 +26,10 @@
           Developer
         </h2>
         <p class="leading">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
+          quaerat!
         </p>
-        <a href="#portfolio" class="button">View my work</a>
+        <a href="#portfolio" class="button">Download Resume</a>
       </div>
       <div class="welcome-img">
         <img src="#" alt="" />
@@ -58,7 +61,7 @@
       </ul>
     </section>
     <section id="portfolio">
-      <h3>My Projects</h3>
+      <h3>My projects</h3>
       <div class="projects grid">
         <a href="#"
           ><img src="#" alt="#" />
@@ -76,10 +79,7 @@
     </section>
     <section id="contact">
       <h3>Get in touch</h3>
-      <p class="leading">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
-        quo.
-      </p>
+      <p class="leading"></p>
       <form>
         <input type="text" placeholder="NAME" />
         <input type="email" placeholder="EMAIL" />
