added about section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
         <img src="" alt="" />
       </div>
     </section>
+    <section id="about">
+      <h3>About</h3>
+      <p class="leading">
+        A professional software developer with a commitment to and experience of
+        developing innovative and creative software solutions. Knowledgeable in
+        user interface/user experience design, coding, testing, debugging,
+        deploying processes and IT support.
+      </p>
+    </section>
     <section id="skills">
       <h3>Things I can do</h3>
       <ul class="grid">
