added home-bg updated index.html styles.css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="#portfolio" class="button">Download Resume</a>
       </div>
       <div class="welcome-img">
-        <img src="#" alt="" />
+        <img src="images/hp.jpg" alt="" />
       </div>
     </section>
     <section id="skills">
