--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <header>
-      <nav class="site-nav grid">
+      <div class="logo">
         <h1>Ronald Nkadimeng</h1>
+      </div>
+      <nav class="nav-bar">
         <ul>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
@@ -18,57 +20,51 @@
           <li><a href="#about">About</a></li>
         </ul>
       </nav>
+      <div class="menu">
+        <a href=""><img src="images/menu.png" alt="menu" /></a>
+      </div>
     </header>
     <section id="welcome" class="grid">
       <div class="welcome-text">
-        <h2>
-          Hello, my name is <b>Ronald Nkadimeng</b><br />& I am a Software
-          Developer
-        </h2>
-        <p class="leading">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
-          quaerat!
-        </p>
-        <a href="#portfolio" class="button">Download Resume</a>
-      </div>
-      <div class="welcome-img">
-        <img src="" alt="" />
+        <h2>Hello, my name is Ronald Nkadimeng & I am a Web Developer</h2>
+        <p class="leading"></p>
+        <a href="" class="button">Download Resume</a>
       </div>
     </section>
     <section id="about">
-      <h3>About</h3>
-      <p class="leading">
-        A professional software developer with a commitment to and experience of
-        developing innovative and creative software solutions. Knowledgeable in
-        user interface/user experience design, coding, testing, debugging,
-        deploying processes and IT support.
-      </p>
+      <h3>About me</h3>
+      <div class="about-text">
+        <p class="leading">
+          A professional software developer with a commitment to and experience
+          of developing innovative and creative software solutions.
+          Knowledgeable in user interface/user experience design, coding,
+          testing, debugging, deploying processes and IT support.
+        </p>
+      </div>
     </section>
+    <br />
     <section id="skills">
       <h3>Things I can do</h3>
-      <ul class="grid">
+      <ul id="skills-list" class="grid">
         <li>
           <img src="images/front-end.png" alt="fontend" />
           <h4>Front-end development</h4>
-          <p class="leading">JavaScript,HTML & CSS</p>
         </li>
         <li>
           <img src="images/back-end.png" alt="backend" />
           <h4>Back-end development</h4>
-          <p class="leading">Node JS, C# & SQL Databases</p>
         </li>
         <li>
           <img src="images/graphic_design.png" alt="graphic design" />
           <h4>Graphic Design</h4>
-          <p class="leading">Adobe Creative Suite</p>
         </li>
         <li>
           <img src="images/it_support.png" alt="it support" />
           <h4>IT Support</h4>
-          <p class="leading">Hardware, Network configuration</p>
         </li>
       </ul>
     </section>
+    <br />
     <section id="portfolio">
       <h3>My projects</h3>
       <div class="projects grid">
@@ -86,6 +82,7 @@
         </a>
       </div>
     </section>
+    <br />
     <section id="contact">
       <h3>Get in touch</h3>
       <p class="leading"></p>
@@ -96,6 +93,8 @@
         <button class="button">Send message</button>
       </form>
     </section>
+    <br />
+    <br />
     <footer>
       <div class="grid">
         <p class="copyright">Copyright 2021 Ronald Nkadimeng</p>
