updated styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -49,18 +49,33 @@
         <li>
           <img src="images/front-end.png" alt="fontend" />
           <h4>Front-end development</h4>
+          <p class="leading">
+            Includes working with html, css & javascript to create user
+            interfaces
+          </p>
         </li>
         <li>
           <img src="images/back-end.png" alt="backend" />
           <h4>Back-end development</h4>
+          <p class="leading">
+            Includes working with node JS, C# , SQL Databases.
+          </p>
         </li>
         <li>
           <img src="images/graphic_design.png" alt="graphic design" />
           <h4>Graphic Design</h4>
+          <p class="leading">
+            Designing application layouts using adobe XD, adobe Photoshop,
+            Sketch.
+          </p>
         </li>
         <li>
           <img src="images/it_support.png" alt="it support" />
           <h4>IT Support</h4>
+          <p class="leading">
+            Desktop hardware, software, OS installations and configurations. LAN
+            set-up & troubleshooting.
+          </p>
         </li>
       </ul>
     </section>
