added github linkedin icons and updated styles and index.html

--- a/index.html
+++ b/index.html
@@ -115,13 +115,15 @@
         <p class="copyright">Copyright 2021 Ronald Nkadimeng</p>
         <ul class="social">
           <li>
-            <a href="https://web.facebook.com/thabo.nkadimeng.14"
-              ><img src="images/icon_fb.svg" alt="facebook"
+            <a href="https://github.com/ronaldnkadimeng" target="_blank"
+              ><img src="images/github.svg" alt="github"
             /></a>
           </li>
           <li>
-            <a href="#twitter"
-              ><img src="images/icon_tw.svg" alt="twitter"
+            <a
+              href="https://www.linkedin.com/in/ronald-nkadimeng-72ab16152/"
+              target="_blank"
+              ><img src="images/linkedin.svg" alt="linkedin"
             /></a>
           </li>
         </ul>
