updated styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -101,9 +101,18 @@
     <section id="contact">
       <h3>Get in touch</h3>
       <p class="leading"></p>
+      <div class="contact-info">
+        <ul>
+          <li><b>Address</b>: Pretoria, South Africa</li>
+          <li><b>Email</b>: Ronaldnkadimeng5@gmail.com</li>
+          <li><b>Phone</b>: +27714398521</li>
+        </ul>
+      </div>
+      <h4><b>Message me</b></h4>
       <form>
         <input type="text" placeholder="NAME" />
         <input type="email" placeholder="EMAIL" />
+        <input type="text" placeholder="SUBJECT" />
         <textarea placeholder="YOUR MESSAGE"></textarea>
         <button class="button">Send message</button>
       </form>
@@ -112,7 +121,7 @@
     <br />
     <footer>
       <div class="grid">
-        <p class="copyright">Copyright 2021 Ronald Nkadimeng</p>
+        <p class="copyright">© 2021 Ronald Nkadimeng</p>
         <ul class="social">
           <li>
             <a href="https://github.com/ronaldnkadimeng" target="_blank"
