changed contact section

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <li><b>Phone</b>: +27714398521</li>
         </ul>
       </div>
-      <h4><b>Message me</b></h4>
+      <h3 class="message-me"><b>Message me :)</b></h3>
       <form>
         <input type="text" placeholder="NAME" />
         <input type="email" placeholder="EMAIL" />
