--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
       <h3>My projects</h3>
       <div class="projects grid">
         <a href="#"
-          ><img src="#" alt="#" />
+          ><img src="#" alt="" />
           <h4>project 1</h4>
         </a>
         <a href="#"
-          ><img src="#" alt="#" />
+          ><img src="#" alt="" />
           <h4>project 2</h4>
         </a>
         <a href="#"
-          ><img src="#" alt="#" />
+          ><img src="#" alt="" />
           <h4>project 3</h4>
         </a>
       </div>
