modified skills section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to my portfolio</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
@@ -20,15 +21,15 @@
           <li><a href="#about">About</a></li>
         </ul>
       </nav>
-      <div class="menu">
+      <!--div class="menu">
         <a href=""><img src="images/menu.png" alt="menu" /></a>
-      </div>
+      </div>-->
     </header>
     <section id="welcome" class="grid">
       <div class="welcome-text">
         <h2>Hello, my name is Ronald Nkadimeng & I am a Web Developer</h2>
         <p class="leading"></p>
-        <a href="" class="button">Download Resume</a>
+        <a href="https://drive.google.com/file/d/1ckCNLCjpvi1PRP0FKiUUhNRvw_oWYW7c/view?usp=sharing" download class="button"><i class="fa fa-download"></i> Download Resume</a>
       </div>
     </section>
     <section id="about">
@@ -50,31 +51,28 @@
           <img src="images/front-end.png" alt="fontend" />
           <h4>Front-end development</h4>
           <p class="leading">
-            Includes working with html, css & javascript to create user
-            interfaces
+            HTML, CSS & Javascript.
           </p>
         </li>
         <li>
           <img src="images/back-end.png" alt="backend" />
           <h4>Back-end development</h4>
           <p class="leading">
-            Includes working with node JS, C# , SQL Databases.
+            Node JS, SQL Databases.
           </p>
         </li>
         <li>
           <img src="images/graphic_design.png" alt="graphic design" />
-          <h4>Graphic Design</h4>
+          <h4>UI/UX Design</h4>
           <p class="leading">
-            Designing application layouts using adobe XD, adobe Photoshop,
-            Sketch.
+            Adobe XD, Figma & Adobe Photoshop.
           </p>
         </li>
         <li>
           <img src="images/it_support.png" alt="it support" />
           <h4>IT Support</h4>
           <p class="leading">
-            Desktop hardware, software, OS installations and configurations. LAN
-            set-up & troubleshooting.
+            Hardware, Software & OS installations.
           </p>
         </li>
       </ul>
