--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="welcome-text">
         <h2>Hello, my name is Ronald Nkadimeng & I am a Web Developer</h2>
         <p class="leading"></p>
-        <a href="https://drive.google.com/file/d/1ckCNLCjpvi1PRP0FKiUUhNRvw_oWYW7c/view?usp=sharing" download class="button"><i class="fa fa-download"></i> Download Resume</a>
+        <a href="images\Ronald_-_CV.pdf" download = "Ronald Nkadimeng_-_CV" class="button"><i class="fa fa-download"></i> Download Resume</a>
       </div>
     </section>
     <section id="about">
@@ -106,7 +106,7 @@
           <li><b>Phone</b>: +27714398521</li>
         </ul>
       </div>
-      <h3 class="message-me"><b>Message me :)</b></h3>
+      <h3 class="message-me"><b>Send a message</b></h3>
       <form>
         <input type="text" placeholder="NAME" />
         <input type="email" placeholder="EMAIL" />
