--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
     <title>Welcome to my portfolio</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" ></script>
   </head>
   <body>
     <header>
-      <div class="logo">
-        <h1>Ronald Nkadimeng</h1>
-      </div>
       <nav class="nav-bar">
+        <input type= "checkbox" id ="check">
+        <label for = "check" class="checkbtn">
+          <i class="fas fa-bars"></i>
+        </label>
+        <label class="logo">Ronald</label>
         <ul>
+          <li><a class="active" href="#">Home</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><a href="#about">About</a></li>
         </ul>
       </nav>
-      <!--div class="menu">
-        <a href=""><img src="images/menu.png" alt="menu" /></a>
-      </div>-->
     </header>
     <section id="welcome" class="grid">
       <div class="welcome-text">
