--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </ul>
       </nav>
     </header>
+    <div class="main">
     <section id="welcome" class="grid">
       <div class="welcome-text">
         <h2>Hello, my name is Ronald Nkadimeng & I am a Web Developer</h2>
@@ -107,7 +108,7 @@
           <li><b>Phone</b>: +27714398521</li>
         </ul>
       </div>
-      <h3 class="message-me"><b>Send a message</b></h3>
+      <h3 class="message-me"><b>Send message</b></h3>
       <form>
         <input type="text" placeholder="NAME" />
         <input type="email" placeholder="EMAIL" />
@@ -137,5 +138,6 @@
         </ul>
       </div>
     </footer>
+  </div>
   </body>
 </html>
