updated index.html & styles.css

--- a/index.html
+++ b/index.html
@@ -118,10 +118,9 @@
       </form>
     </section>
     <br />
-    <br />
     <footer>
       <div class="grid">
-        <p class="copyright">© 2021 Ronald Nkadimeng</p>
+        <p class="copyright">© 2021 Website Created by Ronald Nkadimeng</p>
         <ul class="social">
           <li>
             <a href="https://github.com/ronaldnkadimeng" target="_blank"
