updated styles & index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="main">
     <section id="welcome" class="grid">
       <div class="welcome-text">
-        <h2>Hello, my name is Ronald Nkadimeng & I am a Web Developer</h2>
+        <h2>Hello, my name is Ronald Nkadimeng & I am a Web Developer.</h2>
         <p class="leading"></p>
         <a href="images\Ronald_-_CV.pdf" download = "Ronald Nkadimeng_-_CV" class="button"><i class="fa fa-download"></i> Download Resume</a>
       </div>
