--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
     <section id="portfolio">
       <h3>My projects</h3>
       <div class="projects grid">
-        <a href="#"
-          ><img src="#" alt="" />
-          <h4>project 1</h4>
+        <a href="https://go4ir.com/"
+          ><img src="images/Logo180x60.png" alt="" />
+          <h4>Go4IR Website</h4>
         </a>
         <a href="#"
           ><img src="#" alt="" />
