updated styles & index.html

--- a/index.html
+++ b/index.html
@@ -81,19 +81,15 @@
     </section>
     <br />
     <section id="portfolio">
-      <h3>My projects</h3>
+      <h3>Projects worked on</h3>
       <div class="projects grid">
         <a href="https://go4ir.com/"
-          ><img src="images/Logo180x60.png" alt="" />
-          <h4>Go4IR Website</h4>
+          ><img src="images/Logo180x60.png" alt="1st-project-image" />
+          <h4 style="color: rgb(156, 156, 156);">Go4IR website</h4>
         </a>
-        <a href="#"
-          ><img src="#" alt="" />
-          <h4>project 2</h4>
-        </a>
-        <a href="#"
-          ><img src="#" alt="" />
-          <h4>project 3</h4>
+        <a href="https://beginet.org/"
+          ><img src="images/image.png" alt="2nd-project-image" />
+          <h4 style="color: rgb(156, 156, 156);">Beginet website</h4>
         </a>
       </div>
     </section>
