updated styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div class="main">
     <section id="welcome" class="grid">
       <div class="welcome-text">
-        <h2>Hello, my name is Ronald Nkadimeng & I am a Web Developer.</h2>
-        <p class="leading"></p>
+        <h2>Hello, my name is Ronald Nkadimeng.</h2>
+        <p style="font-size: 22px; color: #ffffff ; font-weight: 500; padding-bottom: 15px;">I am a Web Developer.</p>
         <a href="images\Ronald_-_CV.pdf" download = "Ronald Nkadimeng_-_CV" class="button"><i class="fa fa-download"></i> Download Resume</a>
       </div>
     </section>
