--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Welcome to my portfolio</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" ></script>
+    <!-- <script src="https://kit.fontawesome.com/a076d05399.js" ></script>-->
+    
   </head>
   <body>
     <header>
