added text-decoration on logo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Welcome to my portfolio</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <script src="https://kit.fontawesome.com/a076d05399.js" ></script>-->
+    <script src="https://kit.fontawesome.com/a076d05399.js" ></script>
     
   </head>
   <body>
@@ -17,7 +17,9 @@
         <label for = "check" class="checkbtn">
           <i class="fas fa-bars"></i>
         </label>
+        <div id="logo-border">
         <label class="logo">Ronald</label>
+      </div>
         <ul>
           <li><a class="active" href="#">Home</a></li>
           <li><a href="#skills">Skills</a></li>
@@ -39,7 +41,7 @@
       <h3>About me</h3>
       <div class="about-text">
         <p class="leading">
-          A professional software developer with a commitment to and experience
+          A professional web developer with a commitment to and experience
           of developing innovative and creative software solutions.
           Knowledgeable in user interface/user experience design, coding,
           testing, debugging, deploying processes and IT support.
