--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </header>
     <div class="main">
     <section id="welcome" class="grid">
+       <!-- <h2>Hello, my name is Ronald Nkadimeng.</h2> -->
       <div class="welcome-text">
         <h2>Hello, my name is Ronald Nkadimeng.</h2>
         <p style="font-size: 22px; color: #ffffff ; font-weight: 500; padding-bottom: 15px;">I am a Web Developer.</p>
