--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
        <!-- <h2>Hello, my name is Ronald Nkadimeng.</h2> -->
       <div class="welcome-text">
         <h2>Hello, my name is Ronald Nkadimeng.</h2>
-        <p style="font-size: 22px; color: #ffffff ; font-weight: 500; padding-bottom: 15px;">I am a Web Developer.</p>
+        <p >I am a Web Developer.</p>
         <a href="images\Ronald_-_CV.pdf" download = "Ronald Nkadimeng_-_CV" class="button"><i class="fa fa-download"></i> Download Resume</a>
       </div>
     </section>
