increased project names sizes

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
       <div class="projects grid">
         <a href="https://go4ir.com/"
           ><img src="images/Logo180x60.png" alt="1st-project-image" />
-          <h4 style="color: rgb(156, 156, 156);">Go4IR website</h4>
+          <h4>Go4IR website</h4>
         </a>
         <a href="https://beginet.org/"
           ><img src="images/image.png" alt="2nd-project-image" />
-          <h4 style="color: rgb(156, 156, 156);">Beginet website</h4>
+          <h4>Beginet website</h4>
         </a>
       </div>
     </section>
