--- a/index.html
+++ b/index.html
@@ -127,9 +127,23 @@
           </li>
           <li>
             <a
-              href="https://www.linkedin.com/in/ronald-nkadimeng-72ab16152/"
+              href="https://www.linkedin.com/in/ronald-nkadimeng-72ab16152"
               target="_blank"
               ><img src="images/linkedin.svg" alt="linkedin"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://www.facebook.com/thabo.nkadimeng.14"
+              target="_blank"
+              ><img src="images/facebook.svg" alt="facebook"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/ronaldnkadimeng/"
+              target="_blank"
+              ><img src="images/instagram.svg" alt="instagram"
             /></a>
           </li>
         </ul>
