updated ccs and index.html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <li><b>Phone</b>: +27714398521</li>
         </ul>
       </div>
-      <h3 class="message-me"><b>Send message</b></h3>
+      <h3 class="message-me">Send message</h3>
       <form>
         <input type="text" placeholder="NAME" />
         <input type="email" placeholder="EMAIL" />
