updated styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -53,28 +53,28 @@
       <ul id="skills-list" class="grid">
         <li>
           <img src="images/front-end.png" alt="fontend" />
-          <h4 style="font-weight:550;">Front-end development</h4>
+          <h4 >Front-end development</h4>
           <p class="leading">
             HTML, CSS & Javascript.
           </p>
         </li>
         <li>
           <img src="images/back-end.png" alt="backend" />
-          <h4 style="font-weight:550;">Back-end development</h4>
+          <h4 >Back-end development</h4>
           <p class="leading">
             Node JS, SQL Databases.
           </p>
         </li>
         <li>
           <img src="images/graphic_design.png" alt="graphic design" />
-          <h4 style="font-weight:550;">UI/UX Design</h4>
+          <h4 >UI/UX Design</h4>
           <p class="leading">
             Adobe XD, Figma & Adobe Photoshop.
           </p>
         </li>
         <li>
           <img src="images/it_support.png" alt="it support" />
-          <h4 style="font-weight:550;">IT Support</h4>
+          <h4 >IT Support</h4>
           <p class="leading">
             Hardware, Software & OS installations.
           </p>
